force-app/main/default/objects/Asset_Finance_AMBIT_Asset__x/Asset_Finance_AMBIT_Asset__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>AssetFinanceAssetDetail</externalName>
    <label>Asset Finance AMBIT Asset</label>
    <pluralLabel>Asset Finance AMBIT Asset</pluralLabel>
</CustomObject>