force-app/main/default/objects/Asset_Finance_AMBIT_Asset__x/fields/Asset_Finance_AMBIT_Contract__c.field-meta.xml
<CustomField>
    <fullName>Asset_Finance_AMBIT_Contract__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>Associated id of contract</description>
    <externalDeveloperName>AFAMBITContractNumber</externalDeveloperName>
    <label>Asset Finance AMBIT Contract</label>
    <length>18</length>
    <referenceTo>Asset_Finance_AMBIT_Contract__x</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>PhysicalAssets_Details</relationshipName>
    <type>ExternalLookup</type>
</CustomField>