force-app/main/default/objects/Asset_Finance_AMBIT_Asset__x/fields/Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Number__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Asset identifier</description>
    <externalDeveloperName>AssetNo</externalDeveloperName>
    <label>Asset Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>