force-app/main/default/objects/Asset_Finance_AMBIT_Asset__x/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Associated id of contract</description>
    <externalDeveloperName>ContractId</externalDeveloperName>
    <label>Contract</label>
    <length>18</length>
    <referenceTo>Asset_Finance_AMBIT_Contract__x</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Asset_Details</relationshipName>
    <type>ExternalLookup</type>
</CustomField>