force-app/main/default/objects/Asset_Finance_AMBIT_Asset__x/fields/ECV_Date__c.field-meta.xml
<CustomField>
    <fullName>ECV_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Asset identifier from manufacturer</description>
    <externalDeveloperName>ECVDate</externalDeveloperName>
    <label>ECV Date</label>
    <type>Date</type>
</CustomField>