force-app/main/default/objects/Asset_Finance_AMBIT_Asset__x/fields/Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Cost to purchase the asset. Cost to match the asset&apos;s invoice.</description>
    <externalDeveloperName>PurchasePrice</externalDeveloperName>
    <label>Purchase Price ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>