force-app/main/default/objects/Asset_Finance_AMBIT_Asset__x/fields/Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Serial_No__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Asset identifier from manufacturer</description>
    <externalDeveloperName>SerialNo</externalDeveloperName>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>