force-app/main/default/objects/Asset_Finance_AMBIT_Asset__x/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Year of manufacture of asset</description>
    <externalDeveloperName>Year</externalDeveloperName>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>